--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE HTML5>
 <html>
-
 <head><title>My Summer Vacation</title></head>
-
 <body>
-<main>
-<article>
-<header>The Grand Circle</header>
+<header>The Grand Circle
   <p>My husband Ralph and I love to travel! Our bucket list includes visiting all the national parks. I'd love to tell you about the recent trip we took along the so-called "Grand Circle" in Utah.</p>
   <img src="C:/users/jen/lc101/html-me-something/images/map.png">
-<header>Starting Point</header>
-  <p>We flew into the airport in Vegas. Cool airport, with lots of gambling venues where you can lose money! Zion National Park, only 168 miles away, was the next stop on the agenda.<p>
-<header>Zion National Park</header>
-  <p>We took the shuttle bus to the last stop to hike The Narrows. We were walking in water at the bottom of a slot canyon, with nothing but sheer rock walls to our left and right. The scenery, of course, was fantastic. Our clothes got wet but it was worth it!</p>
-<header>Bryce Canyon</header>
-  <p>Bryce Canyon was only 86 miles away. The park's shuttle bus offered almost 40 miles of amazing views. Later in the day, we hiked the Navajo Loop trail, from which we were able to see the hoodoos from the canyon floor.</p>
-<header>And then home again for us.</header>
-  <p>Unfortunately, we were only there for a long weekend, so we had to cut back out to Vegas and head back home, but the area made a big impression on us and we look forward to returning to finish the Circle!</p>
-</article>
+</header>
+<main>
+  <article>
+    <h1>Starting Point</h1>
+      <p>We flew into the airport in Vegas. Cool airport, with lots of gambling venues where you can lose money! Zion National Park, only 168 miles away, was the next stop on the agenda.<p>
+  </article>
+  <article>
+    <h1>Zion National Park</h1>
+      <p>Bryce Canyon was only 86 miles away. The park's shuttle bus offered almost 40 miles of amazing views. Later in the day, we hiked the Navajo Loop trail, from which we were able to see the hoodoos from the canyon floor.</p>
+  </article>
+  <article>
+    <h1>And then home again for us.</h1>
+      <p>Unfortunately, we were only there for a long weekend, so we had to cut back out to Vegas and head back home, but the area made a big impression on us and we look forward to returning to finish the Circle!</p>
+  </article>
 </main>
 <footer>&copy;2017, Jen Kocher</footer>
 </body>
