Modified headings in index.html, added styles to styles.css

--- a/index.html
+++ b/index.html
@@ -1,23 +1,50 @@
 <!DOCTYPE HTML5>
 <html>
-<head><title>My Summer Vacation</title></head>
+<head>
+  <link type="text/css" rel="stylesheet" href="c:/users/Jen/lc101/html-me-something/styles.css"/>
+  <title>My Summer Vacation</title>
+</head>
 <body>
-<header>The Grand Circle
-  <p>My husband Ralph and I love to travel! Our bucket list includes visiting all the national parks. I'd love to tell you about the recent trip we took along the so-called "Grand Circle" in Utah.</p>
+<header><h1>The Grand Circle</h1>
+  <p>My husband Ralph and I love to travel! We'd love to tell you about our trip around the Grand Circle in Utah.</p>
   <img src="C:/users/jen/lc101/html-me-something/images/map.png">
+  <nav>
+				<ul>
+					<li><a href="#vegas">Las Vegas, NV</a></li>
+					<li><a href="#zion">Zion</a></li>
+					<li><a href="#bryce">Bryce Canyon</a></li>
+          <li><a href="#arches">Arches National Park</a></li>
+          <li><a href="#home">Home again</a></li>
+				</ul>
+	</nav>
 </header>
 <main>
   <article>
-    <h1>Starting Point</h1>
-      <p>We flew into the airport in Vegas. Cool airport, with lots of gambling venues where you can lose money! Zion National Park, only 168 miles away, was the next stop on the agenda.<p>
-  </article>
-  <article>
-    <h1>Zion National Park</h1>
-      <p>Bryce Canyon was only 86 miles away. The park's shuttle bus offered almost 40 miles of amazing views. Later in the day, we hiked the Navajo Loop trail, from which we were able to see the hoodoos from the canyon floor.</p>
-  </article>
-  <article>
-    <h1>And then home again for us.</h1>
-      <p>Unfortunately, we were only there for a long weekend, so we had to cut back out to Vegas and head back home, but the area made a big impression on us and we look forward to returning to finish the Circle!</p>
+    <section>
+      <a name="vegas"></a>
+        <h2>Starting Point - Vegas</h2>
+          <p>We flew into the airport in Vegas. Cool airport, with lots of gambling venues where you can lose money! Zion National Park, only 168 miles away, was the next stop on the agenda. orem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.<p>
+    </section>
+    <section>
+      <a name="zion"></a>
+        <h2>Zion National Park</h2>
+          <p>Blah blah hiking in slot canyon. We got soaking wet. orem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
+    </section>
+    <section>
+      <a name="bryce"></a>
+        <h2>Bryce Canyon National Park</h2>
+          <p>Bryce Canyon was only 86 miles away. The park's shuttle bus offered almost 40 miles of amazing views. Later in the day, we hiked the Navajo Loop trail, from which we were able to see the hoodoos from the canyon floor. orem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
+    </section>
+    <section>
+      <a name="arches"></a>
+        <h2>Arches National Park</h2>
+          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
+    </section>
+    <section>
+      <a name="home"></a>
+        <h2>And then home again for us.</h2>
+          <p>Unfortunately, we were only there for a long weekend, so we had to cut back out to Vegas and head back home, but the area made a big impression on us and we look forward to returning to finish the Circle!</p>
+    </section>
   </article>
 </main>
 <footer>&copy;2017, Jen Kocher</footer>
