Added div to html, added selectors to css

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <body>
 <header><h1>The Grand Circle</h1>
   <p>My husband Ralph and I love to travel! We'd love to tell you about our trip around the Grand Circle in Utah.</p>
-  <img src="C:/users/jen/lc101/html-me-something/images/map.png">
-  <nav>
+  <div id="map"><img src="C:/users/jen/lc101/html-me-something/images/map.png"></div>
+  <div>
+    <nav>
 				<ul>
 					<li><a href="#vegas">Las Vegas, NV</a></li>
 					<li><a href="#zion">Zion</a></li>
@@ -16,7 +17,8 @@
           <li><a href="#arches">Arches National Park</a></li>
           <li><a href="#home">Home again</a></li>
 				</ul>
-	</nav>
+	  </nav>
+  </div>
 </header>
 <main>
   <article>
@@ -28,7 +30,7 @@
     <section>
       <a name="zion"></a>
         <h2>Zion National Park</h2>
-          <p>Blah blah hiking in slot canyon. We got soaking wet. orem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
+          <p>Blah blah hiking in slot canyon. We got soaking wet. Orem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
     </section>
     <section>
       <a name="bryce"></a>
@@ -38,11 +40,11 @@
     <section>
       <a name="arches"></a>
         <h2>Arches National Park</h2>
-          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
+          <p>Orem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin efficitur placerat. Aliquam tincidunt, lacus eu pharetra tristique, mauris purus iaculis neque, eu commodo diam augue a arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sit amet malesuada diam, eu mollis elit. Fusce ut mi nec erat faucibus sagittis a interdum magna. Integer molestie consequat tortor, et varius felis ullamcorper in. Nullam ut ante at ex aliquet gravida non a leo. Nunc non pellentesque diam.</p>
     </section>
     <section>
       <a name="home"></a>
-        <h2>And then home again for us.</h2>
+        <h2 class="final">And then home again for us.</h2>
           <p>Unfortunately, we were only there for a long weekend, so we had to cut back out to Vegas and head back home, but the area made a big impression on us and we look forward to returning to finish the Circle!</p>
     </section>
   </article>
